--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FFB74D</color>
+    <color name="colorPrimaryDark">#c88719</color>
+    <color name="colorAccent">#8D6E63</color>
+    <color name="colorItemBeerList">#FFECB3</color>
+    <color name="colorLightSplash">#ffbb67</color>
 </resources>
