--- a/app/src/main/res/layout/item_adapter_layout.xml
+++ b/app/src/main/res/layout/item_adapter_layout.xml
@@ -27,7 +27,7 @@
                 android:layout_marginStart="@dimen/default_margin_padding"
                 android:layout_marginTop="@dimen/default_margin_padding"
                 android:layout_marginBottom="@dimen/default_margin_padding"
-                android:src="@mipmap/ic_launcher_round"
+                android:src="@mipmap/place_holder"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -37,6 +37,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/imgListBeer"
                 app:layout_constraintStart_toEndOf="@+id/imgListBeer"
                 app:layout_constraintTop_toTopOf="@+id/imgListBeer" />
