--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="default_margin_padding">8dp</dimen>
     <dimen name="size_image_list">60dp</dimen>
+    <dimen name="corner_radius_dialog_button">10dp</dimen>
+    <dimen name="size_text_splash">30sp</dimen>
 </resources>
