--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,7 +13,7 @@
             android:id="@+id/labelBeer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="30sp"
+            android:textSize="@dimen/size_text_splash"
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@android:color/white"
-            android:textSize="30sp"
+            android:textSize="@dimen/size_text_splash"
             app:layout_constraintEnd_toEndOf="@+id/labelBeer"
             app:layout_constraintStart_toStartOf="@+id/labelBeer"
             app:layout_constraintTop_toBottomOf="@+id/labelBeer" />
