--- a/app/src/main/res/layout/item_adapter_layout.xml
+++ b/app/src/main/res/layout/item_adapter_layout.xml
@@ -14,7 +14,8 @@
         app:cardBackgroundColor="@color/colorItemBeerList"
         tools:cardElevation="3dp"
         app:cardElevation="3dp"
-        app:contentPadding="5dp">
+        app:contentPadding="5dp"
+        android:foreground="?selectableItemBackgroundBorderless">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
