--- a/app/src/main/res/layout/progress_adapter_layout.xml
+++ b/app/src/main/res/layout/progress_adapter_layout.xml
@@ -14,8 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
+            android:layout_marginTop="@dimen/default_margin_padding"
+            android:layout_marginBottom="@dimen/default_margin_padding"/>
 
         <ProgressBar
             android:id="@+id/progressBar"
