--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#8D6E63</color>
     <color name="colorItemBeerList">#FFECB3</color>
     <color name="colorLightSplash">#ffbb67</color>
+    <color name="colorBtnNegative">#bdbdbd</color>
+    <color name="colorBlack15">#26000000</color>
 </resources>
