--- a/app/src/main/res/drawable-v24/background_dialog.xml
+++ b/app/src/main/res/drawable-v24/background_dialog.xml
@@ -4,5 +4,5 @@
     android:shape="rectangle">
     <stroke android:color="@color/colorPrimary" android:width="2dp" />
     <corners android:radius="10dp"/>
-    <solid android:color="@color/colorItemBeerList" />
+    <solid android:color="@color/colorLightBeer" />
 </shape>
